game-2048/game-dep.yml
---
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: game-2048
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  # namespace: game-2048
  name: deployment-2048
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-2048
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-2048
    spec:
      containers:
      - image: alexwhen/docker-2048
        imagePullPolicy: Always
        name: app-2048
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  # namespace: game-2048
  name: service-2048
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  # type: NodePort
  selector:
    app.kubernetes.io/name: app-2048
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   # namespace: game-2048
#   name: ingress-2048
#   # annotations:
#   #   kubernetes.io/ingress.class: alb
#   #   alb.ingress.kubernetes.io/scheme: internet-facing
#   #   alb.ingress.kubernetes.io/target-type: instance
# spec:
#   ingressClassName: nginx
#   rules:
#     - http:
#         paths:
#           # - path: /*
#           #   backend:
#           #     serviceName: service-2048
#           #     servicePort: 80
#           - path: /game
#             pathType: Prefix
#             backend:
#               service:
#                 name: service-2048
#                 port:
#                   number: 80
