game-2048/game-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # namespace: game-2048
  name: ingress-2048
  # annotations:
  #   kubernetes.io/ingress.class: alb
  #   alb.ingress.kubernetes.io/scheme: internet-facing
  #   alb.ingress.kubernetes.io/target-type: instance
spec:
  ingressClassName: nginx
  rules:
    - host: game.akhilmovva.live
      http:
        paths:
          # - path: /*
          #   backend:
          #     serviceName: service-2048
          #     servicePort: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-2048
                port:
                  number: 80
